# arduino-filterwheel

./: .gitignore  CMakeLists.txt  arduino_filterwheel.ino  filterwheel-cli.c  filterwheel.h  readme.md  serial.c
arduino/: arduino.ino
arduino-filterwheel/: arduino-filterwheel.ino
hardware/: components.txt  connection-diagram.fzz  readme.md
mock/: filterwheel.c
serial/: filterwheel.c  serial.c
wiring/: Untitled Sketch.fzz
